messing with python

--- a/Python/Untitled.ipynb
+++ b/Python/Untitled.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +78,98 @@
    ],
    "source": [
     "print(__name__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2020-06-22\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import date\n",
+    "from datetime import time\n",
+    "from datetime import datetime\n",
+    "\n",
+    "print(date.today())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     June 2020\n",
+      "Su Mo Tu We Th Fr Sa\n",
+      "    1  2  3  4  5  6\n",
+      " 7  8  9 10 11 12 13\n",
+      "14 15 16 17 18 19 20\n",
+      "21 22 23 24 25 26 27\n",
+      "28 29 30\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import calendar\n",
+    "\n",
+    "print(calendar.TextCalendar(calendar.SUNDAY).formatmonth(2020, 6, 0, 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"0\" cellpadding=\"0\" cellspacing=\"0\" class=\"month\">\n",
+      "<tr><th colspan=\"7\" class=\"month\">June 2020</th></tr>\n",
+      "<tr><th class=\"sun\">Sun</th><th class=\"mon\">Mon</th><th class=\"tue\">Tue</th><th class=\"wed\">Wed</th><th class=\"thu\">Thu</th><th class=\"fri\">Fri</th><th class=\"sat\">Sat</th></tr>\n",
+      "<tr><td class=\"noday\">&nbsp;</td><td class=\"mon\">1</td><td class=\"tue\">2</td><td class=\"wed\">3</td><td class=\"thu\">4</td><td class=\"fri\">5</td><td class=\"sat\">6</td></tr>\n",
+      "<tr><td class=\"sun\">7</td><td class=\"mon\">8</td><td class=\"tue\">9</td><td class=\"wed\">10</td><td class=\"thu\">11</td><td class=\"fri\">12</td><td class=\"sat\">13</td></tr>\n",
+      "<tr><td class=\"sun\">14</td><td class=\"mon\">15</td><td class=\"tue\">16</td><td class=\"wed\">17</td><td class=\"thu\">18</td><td class=\"fri\">19</td><td class=\"sat\">20</td></tr>\n",
+      "<tr><td class=\"sun\">21</td><td class=\"mon\">22</td><td class=\"tue\">23</td><td class=\"wed\">24</td><td class=\"thu\">25</td><td class=\"fri\">26</td><td class=\"sat\">27</td></tr>\n",
+      "<tr><td class=\"sun\">28</td><td class=\"mon\">29</td><td class=\"tue\">30</td><td class=\"noday\">&nbsp;</td><td class=\"noday\">&nbsp;</td><td class=\"noday\">&nbsp;</td><td class=\"noday\">&nbsp;</td></tr>\n",
+      "</table>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(calendar.HTMLCalendar(calendar.SUNDAY).formatmonth(2020, 6))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nt\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "\n",
+    "print(os.name)"
    ]
   }
  ],
