--- a/Python/Untitled.ipynb
+++ b/Python/Untitled.ipynb
@@ -2,16 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "abc\n",
-      "abc123\n"
-     ]
+     "name": "stdout",
+     "text": "abc\nabc123\n"
     }
    ],
    "source": [
@@ -19,26 +18,6 @@
     "print(foo)\n",
     "\n",
     "print(foo + str(123))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "five plus 10 equals 15 and not 30\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = 5\n",
-    "b = 10\n",
-    "\n",
-    "print(f'five plus 10 equals {a + b} and not {2 * (a+b)}')"
    ]
   },
   {
@@ -61,6 +40,26 @@
     "\n",
     "print(a)\n",
     "print(type(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "five plus 10 equals 15 and not 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "b = 10\n",
+    "\n",
+    "print(f'five plus 10 equals {a + b} and not {2 * (a+b)}')"
    ]
   },
   {
@@ -155,15 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
-     "text": [
-      "nt\n"
-     ]
+     "name": "stdout",
+     "text": "nt\n"
     }
    ],
    "source": [
@@ -171,13 +170,45 @@
     "\n",
     "print(os.name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "\n    <html>\n        <head>\n            <title>Home Page - Microblog - vin</title>\n        </head>\n        <body>\n            <h1>Hello, vin</h1>\n        </body>\n    </html>\n    \n"
+    }
+   ],
+   "source": [
+    "def index():\n",
+    "    # user = { 'username': 'vin' }\n",
+    "    user = { username: 'vin'}\n",
+    "    myString = '''\n",
+    "    <html>\n",
+    "        <head>\n",
+    "            <title>Home Page - Microblog - ''' + user['username'] + '''</title>\n",
+    "        </head>\n",
+    "        <body>\n",
+    "            <h1>Hello, ''' + user['username'] + '''</h1>\n",
+    "        </body>\n",
+    "    </html>\n",
+    "    '''\n",
+    "    return myString\n",
+    "\n",
+    "print(index())"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.3 64-bit",
    "language": "python",
-   "name": "python3"
+   "name": "python38364bit51cdafb879164883bbd687c367b2a4f9"
   },
   "language_info": {
    "codemirror_mode": {
@@ -189,7 +220,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3-final"
   }
  },
  "nbformat": 4,
